# backend/controllers/teams.go
@@ -147,7 +147,7 @@ func NewTeam(c *gin.Context) {
 // @Success 201 {object} responses.StandardResponse "Relación de apoyo creada exitosamente"
 // @Failure 400 {object} responses.ErrorResponse "Error al procesar la solicitud"
 // @Failure 500 {object} responses.ErrorResponse "Error al procesar la solicitud"
-// @Router /teams/supports [post]
+// @Router /teams/likes [post]
 func CreateRelationSupportsTeam(c *gin.Context) {
 	session := configs.DB.NewSession(c, neo4j.SessionConfig{AccessMode: neo4j.AccessModeWrite})
 
